# exchange-demo

./: .gitignore  CMakeLists.txt  Notes.md  README.md  build_and_test.sh  build_and_test_debug.sh
apps/exchange_sim/: CMakeLists.txt
apps/exchange_sim/src/: main.cpp
libs/core/: CMakeLists.txt
libs/core/include/: FeedMessage.h  IInternalEventSink.h  IMarketDataSink.h  InternalEvents.h  SpscRing.h  Types.h
libs/feed/: CMakeLists.txt
libs/feed/include/: FeedPump.h  QueueProducer.h  Sequencer.h
libs/feed/src/: FeedPump.cpp  QueueProducer.cpp  Sequencer.cpp
libs/feed/tests/: CMakeLists.txt  SequencerTests.cpp
libs/marketdata/: CMakeLists.txt
libs/marketdata/include/: IMarketDataTransport.h  MarketDataEvents.h  MarketDataPublisher.h
libs/marketdata/src/: MarketDataPublisher.cpp
libs/marketdata/tests/: CMakeLists.txt  MarketDataTests.cpp
libs/matching/: CMakeLists.txt
libs/matching/include/: MatchingEngine.h
libs/matching/src/: MatchingEngine.cpp
libs/matching/tests/: CMakeLists.txt  MatchingEngineTests.cpp
libs/orderbook/: CMakeLists.txt
libs/orderbook/include/: OrderBook.h
libs/orderbook/src/: OrderBook.cpp
libs/orderbook/tests/: CMakeLists.txt  OrderBookTests.cpp
src/: OrderBook.cpp  OrderBook.h  Utils.h  main.cpp
